# akatsuki

./: .gitignore  AGENT-mini.md  AGENT.md  CONTRIBUTING.md  ComfyUI_03043_.json  LICENSE  README.ja_JP.md  README.md  package-lock.json  package.json
.github/workflows/: release-cli.yml
Formula/: akatsuki.rb
docs/: SUPABASE_CONFIGURATION.md  setup.md
docs/design/: async_job_system.md  function_call_system.md  public-api-gateway.md  rag-2step-upload-flow.md  rag-file-search-architecture.md  rag-provider-abstraction.md  runpod_comfyui_integration.md  wasm-edge-integration.md  wasm-runtime-design.md  webhook_system.md
docs/examples/: agent-asset-hub-design.md
docs/implementation/: wasm-edge-implementation-summary.md
docs/templates/: article-schema-example.yaml  design-template.md
scripts/: check-setup.js  check-supabase-login.js  create-design.js  install-cli.sh  list-designs.js  publish-design.js  setup.js  use-design.js  workspace-publish.js
supabase/: config.toml
supabase/migrations/: 20251029080112_create_profiles_table.sql  20251029090845_add_profile_creation_trigger.sql  20251029093327_add_role_to_profiles.sql  20251029102224_add_ai_models_table.sql  20251029102858_seed_ai_models.sql  20251029103728_add_ai_models_metadata.sql  20251030103900_create_llm_quota_system.sql  20251030131835_create_storage_buckets.sql  20251030142752_create_files_tables.sql  20251030142901_create_storage_hooks.sql  20251030142943_create_files_rls_policies.sql  (+48 more)
wasm-modules/sample-module/: Cargo.toml  README.md
wasm-modules/sample-module/src/: lib.rs
(+66 files in other folders)
